# do_containerlab_droplet

./: .gitignore  README.md  Taskfile.yml  create_droplet.py  delete_droplet.py  delete_snapshot.py  doclab.pkr.hcl  env.example  get_droplet_details.py  list_droplets.py  list_snapshots.py  pyproject.toml  shut_save_delete.py
api/: dolib.py
scripts/: containerlab.sh  install.sh  post.sh  pre.sh
